@@ -3683,6 +3683,361 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testReadWithRemoteBlockReader ()
+specifier|public
+name|void
+name|testReadWithRemoteBlockReader
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+name|doTestShortCircuitReadWithRemoteBlockReader
+argument_list|(
+literal|true
+argument_list|,
+literal|3
+operator|*
+name|blockSize
+operator|+
+literal|100
+argument_list|,
+name|getCurrentUser
+argument_list|()
+argument_list|,
+literal|0
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Test that file data can be read by reading the block    * through RemoteBlockReader    * @throws IOException   */
+DECL|method|doTestShortCircuitReadWithRemoteBlockReader (boolean ignoreChecksum, int size, String shortCircuitUser, int readOffset, boolean shortCircuitFails)
+specifier|public
+name|void
+name|doTestShortCircuitReadWithRemoteBlockReader
+parameter_list|(
+name|boolean
+name|ignoreChecksum
+parameter_list|,
+name|int
+name|size
+parameter_list|,
+name|String
+name|shortCircuitUser
+parameter_list|,
+name|int
+name|readOffset
+parameter_list|,
+name|boolean
+name|shortCircuitFails
+parameter_list|)
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+name|Configuration
+name|conf
+init|=
+operator|new
+name|Configuration
+argument_list|()
+decl_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_USE_LEGACY_BLOCKREADER
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|setBoolean
+argument_list|(
+name|DFSConfigKeys
+operator|.
+name|DFS_CLIENT_READ_SHORTCIRCUIT_KEY
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+name|MiniDFSCluster
+name|cluster
+init|=
+operator|new
+name|MiniDFSCluster
+operator|.
+name|Builder
+argument_list|(
+name|conf
+argument_list|)
+operator|.
+name|numDataNodes
+argument_list|(
+literal|1
+argument_list|)
+operator|.
+name|format
+argument_list|(
+literal|true
+argument_list|)
+operator|.
+name|build
+argument_list|()
+decl_stmt|;
+name|FileSystem
+name|fs
+init|=
+name|cluster
+operator|.
+name|getFileSystem
+argument_list|()
+decl_stmt|;
+comment|// check that / exists
+name|Path
+name|path
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"/"
+argument_list|)
+decl_stmt|;
+name|URI
+name|uri
+init|=
+name|cluster
+operator|.
+name|getURI
+argument_list|()
+decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"/ should be a directory"
+argument_list|,
+name|fs
+operator|.
+name|getFileStatus
+argument_list|(
+name|path
+argument_list|)
+operator|.
+name|isDirectory
+argument_list|()
+operator|==
+literal|true
+argument_list|)
+expr_stmt|;
+name|byte
+index|[]
+name|fileData
+init|=
+name|AppendTestUtil
+operator|.
+name|randomBytes
+argument_list|(
+name|seed
+argument_list|,
+name|size
+argument_list|)
+decl_stmt|;
+name|Path
+name|file1
+init|=
+operator|new
+name|Path
+argument_list|(
+literal|"filelocal.dat"
+argument_list|)
+decl_stmt|;
+name|FSDataOutputStream
+name|stm
+init|=
+name|createFile
+argument_list|(
+name|fs
+argument_list|,
+name|file1
+argument_list|,
+literal|1
+argument_list|)
+decl_stmt|;
+name|stm
+operator|.
+name|write
+argument_list|(
+name|fileData
+argument_list|)
+expr_stmt|;
+name|stm
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|checkFileContent
+argument_list|(
+name|uri
+argument_list|,
+name|file1
+argument_list|,
+name|fileData
+argument_list|,
+name|readOffset
+argument_list|,
+name|shortCircuitUser
+argument_list|,
+name|conf
+argument_list|,
+name|shortCircuitFails
+argument_list|)
+expr_stmt|;
+comment|//RemoteBlockReader have unsupported method read(ByteBuffer bf)
+name|assertTrue
+argument_list|(
+literal|"RemoteBlockReader unsupported method read(ByteBuffer bf) error"
+argument_list|,
+name|checkUnsupportedMethod
+argument_list|(
+name|fs
+argument_list|,
+name|file1
+argument_list|,
+name|fileData
+argument_list|,
+name|readOffset
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"doTestShortCircuitReadWithRemoteBlockReader ex error "
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|InterruptedException
+name|inEx
+parameter_list|)
+block|{
+throw|throw
+name|inEx
+throw|;
+block|}
+finally|finally
+block|{
+name|fs
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|cluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+DECL|method|checkUnsupportedMethod (FileSystem fs, Path file, byte[] expected, int readOffset)
+specifier|private
+name|boolean
+name|checkUnsupportedMethod
+parameter_list|(
+name|FileSystem
+name|fs
+parameter_list|,
+name|Path
+name|file
+parameter_list|,
+name|byte
+index|[]
+name|expected
+parameter_list|,
+name|int
+name|readOffset
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|HdfsDataInputStream
+name|stm
+init|=
+operator|(
+name|HdfsDataInputStream
+operator|)
+name|fs
+operator|.
+name|open
+argument_list|(
+name|file
+argument_list|)
+decl_stmt|;
+name|ByteBuffer
+name|actual
+init|=
+name|ByteBuffer
+operator|.
+name|allocateDirect
+argument_list|(
+name|expected
+operator|.
+name|length
+operator|-
+name|readOffset
+argument_list|)
+decl_stmt|;
+name|IOUtils
+operator|.
+name|skipFully
+argument_list|(
+name|stm
+argument_list|,
+name|readOffset
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|stm
+operator|.
+name|read
+argument_list|(
+name|actual
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|UnsupportedOperationException
+name|unex
+parameter_list|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+return|return
+literal|false
+return|;
+block|}
 block|}
 end_class
 
